Enhance validation in AlgorithmDetails and introduce MakeDecisionRequest/Response DTOs