@@ -1,6 +1,7 @@
 package com.eojeda89.decididorapi.common.exception;
 
 import jakarta.validation.ConstraintViolationException;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.MethodArgumentNotValidException;
@@ -10,19 +11,24 @@ import org.springframework.web.bind.annotation.RestControllerAdvice;
 import java.time.Instant;
 import java.util.HashMap;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import static com.eojeda89.decididorapi.common.exception.Exceptions.*;
 
 @RestControllerAdvice
+@Slf4j
 public class GlobalExceptionHandler {
+
+    private static final String TIMESTAMP = "timestamp";
+    private static final String STATUS = "status";
+    private static final String ERROR = "error";
+    private static final String MESSAGE = "message";
 
     private Map<String, Object> body(HttpStatus status, String message) {
         Map<String, Object> map = new HashMap<>();
-        map.put("timestamp", Instant.now().toString());
-        map.put("status", status.value());
-        map.put("error", status.getReasonPhrase());
-        map.put("message", message);
+        map.put(TIMESTAMP, Instant.now().toString());
+        map.put(STATUS, status.value());
+        map.put(ERROR, status.getReasonPhrase());
+        map.put(MESSAGE, message);
         return map;
     }
 
@@ -31,8 +37,11 @@ public class GlobalExceptionHandler {
         HttpStatus status = HttpStatus.BAD_REQUEST;
         Map<String, Object> map = body(status, "Validation failed");
         map.put("details", ex.getBindingResult().getFieldErrors().stream()
-                .map(fe -> Map.of("field", fe.getField(), "message", fe.getDefaultMessage()))
-                .collect(Collectors.toList()));
+                .map(fe -> {
+                    assert fe.getDefaultMessage() != null;
+                    return Map.of("field", fe.getField(), MESSAGE, fe.getDefaultMessage());
+                })
+                .toList());
         return ResponseEntity.status(status).body(map);
     }
 
@@ -41,8 +50,8 @@ public class GlobalExceptionHandler {
         HttpStatus status = HttpStatus.BAD_REQUEST;
         Map<String, Object> map = body(status, "Validation failed");
         map.put("details", ex.getConstraintViolations().stream()
-                .map(cv -> Map.of("property", cv.getPropertyPath().toString(), "message", cv.getMessage()))
-                .collect(Collectors.toList()));
+                .map(cv -> Map.of("property", cv.getPropertyPath().toString(), MESSAGE, cv.getMessage()))
+                .toList());
         return ResponseEntity.status(status).body(map);
     }
 
@@ -78,7 +87,7 @@ public class GlobalExceptionHandler {
 
     @ExceptionHandler(Exception.class)
     public ResponseEntity<Map<String, Object>> handleUnexpected(Exception ex) {
-        ex.printStackTrace(); // Log the exception for debugging
+        log.error(ex.getMessage(), ex);
         return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(body(HttpStatus.INTERNAL_SERVER_ERROR, "Unexpected error"));
     }
 }
